syntax = "proto3";

package model;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.aggiedish.protos.model";
option java_outer_classname = "GetFoodProductRequestOuterClass";

message GetFoodProductRequest {
  // The identifier of the eatery with which the food product is associated.
  google.protobuf.StringValue eatery_id = 1;

  // The identifier of the food product.
  google.protobuf.StringValue food_product_id = 2;
}
